--- a/wiki/overview/getting-started.mdx
+++ b/wiki/overview/getting-started.mdx
@@ -1,11 +1,8 @@
 ---
 description: Your quick-start guide to NEAR Protocol and the NEARverse
-sidebar_position: 2
-title: Overview
+sidebar_position: 0
+title: Gettting Started
 ---
-
-import SearchBox from '@site/src/components/SearchBox';
-
 
 
 ---
